<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Vida</string>
    <string name="title_alert_detail"></string>
    <string name="title_alert_map">Vida Map</string>
    <string name="title_alert_add">Add Alert</string>
    <string name="alert_desc">Description</string>
    <string name="alert_symptoms">Symptoms</string>
    <string name="alert_prevent">Prevent it</string>
    <string name="alert_help">Cure it</string>

    <string name="action_map">Map</string>
    <string name="action_add">Add</string>
    <string name="alert_form_prevent">How to prevent it</string>
    <string name="alert_form_help">How to cure it</string>
    <string name="submit">Submit</string>
    <string name="alert_form_priority">Priority</string>
    <string name="alert_form_radius">Radius (km)</string>

    <string-array name="array_priority">
        <item>Common</item>
        <item>Urgent</item>
        <item>Critical</item>
    </string-array>
</resources>
