<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              xmlns:tools="http://schemas.android.com/tools"
              tools:context=".AlertDetailFragment"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

        <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/alert_desc"
                    android:id="@+id/textView"
                    android:textSize="30dp"
                    android:textColor="#010100"/>

            <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/inputDesc"
                    android:layout_gravity="right|center_vertical"/>

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/alert_symptoms"
                    android:id="@+id/textView2"
                    android:layout_gravity="left|center_vertical"
                    android:textColor="#010100"
                    android:textSize="30dp"/>

            <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/inputSymp"
                    android:layout_gravity="right|center_vertical"/>

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/alert_form_prevent"
                    android:id="@+id/textView3"
                    android:layout_gravity="left|center_vertical"
                    android:textColor="#010100"
                    android:textSize="30dp"/>

            <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/inputPrev"
                    android:layout_gravity="right|center_vertical"/>

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/alert_form_help"
                    android:id="@+id/textView5"
                    android:layout_gravity="left|center_vertical"
                    android:textColor="#010100"
                    android:textSize="30dp"/>

            <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/inputCure"
                    android:layout_gravity="right|center_vertical"/>

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/alert_form_priority"
                    android:id="@+id/textView4"
                    android:layout_gravity="left|center_vertical"
                    android:textColor="#010100"
                    android:textSize="30dp"/>

            <Spinner
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/inputPrio"
                    android:entries="@array/array_priority"
                    android:layout_gravity="right|center_vertical"/>

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/alert_form_radius"
                    android:id="@+id/textView6"
                    android:layout_gravity="left|center_vertical"
                    android:textColor="#010100"
                    android:textSize="30dp"/>

            <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal"
                    android:ems="10"
                    android:id="@+id/inputRadius"
                    android:layout_gravity="right|center_vertical"/>

        </LinearLayout>

    </ScrollView>

    <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/submit"
            android:id="@+id/submitBtn"
            android:layout_gravity="center"/>

</LinearLayout>