<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".AlertDetailFragment"
    android:layout_marginLeft="10dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

                <TextView
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/alert_desc"
                        android:id="@+id/textView"
                        android:textSize="30dp"
                        android:textColor="#010100"/>

                <TextView
                    android:id="@+id/alert_description"
                    style="?android:attr/textAppearanceLarge"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right|center_vertical"
                    android:textColor="#5a6359"
                    android:gravity="right"/>

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/alert_symptoms"
                        android:id="@+id/textView2"
                        android:layout_gravity="left|center_vertical"
                        android:textColor="#010100"
                        android:textSize="30dp"/>

                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:id="@+id/alert_symptoms"
                        android:layout_gravity="right|center_vertical"
                        android:textColor="#5a6359"
                        android:gravity="right"/>

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/alert_prevent"
                        android:id="@+id/textView3"
                        android:layout_gravity="left|center_vertical"
                        android:textColor="#010100"
                        android:textSize="30dp"/>

                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:id="@+id/alert_prevent"
                        android:layout_gravity="right|center_vertical"
                        android:textColor="#5a6359"
                        android:gravity="right"/>

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/alert_help"
                        android:id="@+id/textView5"
                        android:layout_gravity="left|center_vertical"
                        android:textColor="#010100"
                        android:textSize="30dp"/>

                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:id="@+id/alert_help"
                        android:layout_gravity="right|center_vertical"
                        android:textColor="#5a6359"
                        android:gravity="right"/>
        </LinearLayout>

    </ScrollView>

</LinearLayout>


